Support uploading/sharing/querying message attachments